# ODplatform-XDU

./: .gitignore  FEATURE_AGENT.md  LICENSE  README.md  TECH_REPORT.md  pyproject.toml
apps/platform/: README.md  pyproject.toml
apps/platform/configs/: infer.example.yaml  train.example.yaml  val.example.yaml
apps/platform/configs/datasets/: room_separation_3.yaml  rsod.yaml
apps/platform/src/odp_platform/: __init__.py
apps/platform/src/odp_platform/cli/: __init__.py  generate_config.py  infer.py  init_project.py  predict.py  reset_project.py  train.py  train_model.py  trans.py  transform_data.py  val.py  val_model.py  validate.py  validate_data.py
apps/platform/src/odp_platform/common/: __init__.py  config_log.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  performance_utils.py  plot_style.py  result.py  string_utils.py  system_utils.py
apps/platform/src/odp_platform/config/: __init__.py  base.py  builder.py  generator.py  infer_config.py  loaders.py  merger.py  train_config.py  val_config.py  validator.py
apps/platform/src/odp_platform/data_pipeline/: __init__.py  orchestrator.py  registry.py  service.py
apps/platform/src/odp_platform/data_pipeline/core/: __init__.py  coco.py  pascal_voc.py  yolo.py
apps/platform/src/odp_platform/data_pipline/: __init__.py  service.py
apps/platform/src/odp_platform/data_validation/: __init__.py  registry.py  render.py  report.py  service.py  snapshot.py
apps/platform/src/odp_platform/evaluation/: __init__.py  service.py
apps/platform/src/odp_platform/frame_source/: __init__.py  factory.py  overlay.py
apps/platform/src/odp_platform/inference/: __init__.py  cancel.py  components.py  hooks.py  overlay.py  pipeline.py  pipeline_config.py  room_segmentation.py  service.py  sinks.py
apps/platform/src/odp_platform/runtime_config/: __init__.py  base.py  builder.py  generator.py  generator_core.py  infer.py  loaders.py  loaders_core.py  merger.py  merger_core.py  train.py  val.py  validator.py
apps/platform/src/odp_platform/training/: __init__.py  service.py
apps/platform/src/odp_platform/visualization/: __init__.py  visualizer.py
apps/platform/tests/: test_e2e_smoke.py
apps/platform/tests/data_pipeline/: test_converters.py  test_registry.py
apps/platform/tests/data_pipeline/split/: __init__.py  test_materializer.py  test_splitter.py
apps/platform/tests/data_validation/: __init__.py  test_checks_yaml_schema.py  test_e2e.py  test_registry.py
apps/platform/tests/integration/: test_init_project.py  test_train_pipeline.py
apps/platform/tests/unit/common/: test_dataset_path.py  test_log_rename.py  test_logging_utils.py  test_model_path.py  test_performance_utils.py  test_result.py  test_string_utils.py
apps/platform/tests/unit/config/: test_builders.py  test_generator.py  test_loaders.py  test_merger.py  test_models.py  test_runtime_config_api.py  test_train_cli.py  test_val_infer_cli.py  test_validation.py
apps/platform/tests/unit/frame_source/: test_frame_source.py
apps/platform/tests/unit/inference/: test_service.py
apps/platform/tests/unit/training/: test_archive.py  test_service.py
apps/platform/tests/unit/visualization/: test_visualization.py
apps/web-backend/: .env.example  README.md  agent.py  main.py  model_handler.py  pyproject.toml  requirements.txt
apps/web-backend/src/odp_web_backend/: __init__.py  main.py  schemas.py
apps/web-backend/src/odp_web_backend/routers/: agent.py  datasets.py  evaluation.py  files.py  floorplans.py  health.py  inference.py  jobs.py  models.py  overview.py  pipeline.py  runs.py  uploads.py
apps/web-backend/src/odp_web_backend/services/: dataset_upload.py  evaluation_reports.py  floorplans.py  jobs.py  serving_models.py  workspace.py
data/: README.md
scripts/: bootstrap.sh  (+5 more)
(+111 files in other folders)
