[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "odplatform-workspace"
version = "0.1.0"
description = "Workspace metadata for the ODPlatform monorepo."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "ODPlatform Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "apps/platform/tests",
  "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
  "apps/platform/src",
  "apps/platform/tests",
  "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
